# motion_tracer

./: CMakeLists.txt  README.md  package.xml  view.rviz
capture/: joy_data1.csv  tracer_data1.csv
cfg/: Robot.cfg  Tracer.cfg
config/: elecom_to_ps3.yaml  robot_list.csv
include/motion_tracer/: lower_controller.h  tracer_command.h  tracer_teleop.h  upper_controller.h
launch/: data_converter.launch  joy.launch  playback.launch  recording.launch  robot_bringup.launch  rs_camera.launch  tracer_bringup.launch  view.launch  wheel_bringup.launch
scripts/: bringup.sh  teleop_mover.sh
src/: joy_playback.cpp  joy_recording.cpp  lower_controller.cpp  tracer_command.cpp  tracer_playback.cpp  tracer_recording.cpp  tracer_teleop.cpp  upper_controller.cpp
